fixed margin/spacing on editor

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -11,7 +11,9 @@ body {
     -webkit-box-shadow: 10px 0 5px 10px #aaa;
     box-shadow: 10px 0 5px 10px #aaa;
 } 
-
+#content {
+    margin-top: 10px;
+   }
 #slider {
     cursor: pointer;
     }
